--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -34,9 +34,9 @@
 <!-- organize pages into new folder and use command below -->
 <a href="./pages/about.html">About</a>
 
-<img src="./images/dog.jpg">
+<img src="./images/dog.jpg" alt="./images/dog.jpg" height="310" width="310">
 
-<img src="../images/dog.jpg">
+
 
 
 
