--- a/odin-links-and-images/pages/about.html
+++ b/odin-links-and-images/pages/about.html
@@ -7,5 +7,7 @@
 
   <body>
     <h1>About Page</h1>
+
+    <img src="../images/dog.jpg" alt="../images/dog.jpg" height="350" width="350">
   </body>
 </html>
